// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <thead
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Code
          </th>
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Capital
          </th>
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ btyolb"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <thead
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <th
            className="sc-jKJlTe hnCjdD"
          >
            #
          </th>
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Code
          </th>
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Capital
          </th>
          <th
            className="sc-jKJlTe hnCjdD"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            1
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            2
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            3
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            4
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            5
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ ymqEc"
          >
            6
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ btyolb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
